Updated the scripts and folder structure

--- a/Dockerfiles/Dockerfile.depend
+++ b/Dockerfiles/Dockerfile.depend
@@ -1,33 +1,50 @@
-FROM nvidia/cuda:8.0
+#FROM nvidia/cuda:9.0-devel
+FROM nvidia/cuda:8.0-devel-ubuntu16.04
 
 MAINTAINER mateusz.malenta@manchester.ac.uk
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     autoconf \
     automake \
+    bash \
     bsdmainutils \
     ca-certificates \
     csh \
     cvs \
     gdb \
     git \
+    gnuplot \
     htop \
     libboost-all-dev \
     libfftw3-3 \
     libfftw3-dev \
     libnuma-dev \
     libtool \
+    libtool-bin \
     m4 \
     mlocate \
     numactl \
+    vim \
     wget && \
     apt-get clean
 
 RUN updatedb
 
+RUN wget https://repo.continuum.io/archive/Anaconda2-5.0.1-Linux-x86_64.sh -O conda.sh && \ 
+    wget https://sourceforge.net/projects/gnuplot-py/files/Gnuplot-py/1.8/gnuplot-py-1.8.tar.gz && \
+    tar -xvf gnuplot-py-1.8.tar.gz && \
+    bash ./conda.sh -b -p /anaconda2 && rm conda.sh && rm gnuplot-py-1.8.tar.gz
+
+ENV PATH /anaconda2/bin:${PATH}
+
+#Installs GNUPLOT.py
+RUN pip install pika && cd gnuplot-py-1.8 && /anaconda2/bin/python2.7 setup.py install
+
 WORKDIR /
 
-RUN cvs -z3 -d:pserver:anonymous@psrdada.cvs.sourceforge.net:/cvsroot/psrdada co -P psrdada && \
+# psrdata now moved to git
+# RUN cvs -z3 -d:pserver:anonymous@psrdada.cvs.sourceforge.net:/cvsroot/psrdada co -P psrdada && \
+RUN git clone https://git.code.sf.net/p/psrdada/code psrdada && \
     git clone https://github.com/ajameson/dedisp.git
 WORKDIR /psrdada
 RUN ./bootstrap && mkdir /psrdada-install && ./configure --prefix=/psrdada-install && make && make install
